// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the ViewRequest component renders with the right view for a user 1`] = `
<div
  className="single_request_column"
>
  <div
    className="single_request_info"
  >
    <time>
      7th_October_2018
    </time>
    <span
      className="request_status"
    >
      pending
    </span>
    <h3
      className="single_request_title"
    >
      General repainting
    </h3>
    <h4>
      Smartphone
    </h4>
    <p
      className="single_request_body"
    >
      Although a downpour briefly interrupted play in the early stages of the second half, Nigeria played with more intent after half-time and went close in the 63rd minute, as John Obi Mikel saw a header saved by Vaclik.
    </p>
    <div
      className="request_footer"
    >
      <Link
        className="edit_request_link"
        replace={false}
        to="/requests/13/edit"
      >
        <span>
          EDIT
        </span>
      </Link>
    </div>
  </div>
</div>
`;

exports[`Test the ViewRequest component renders with the right view for an admin 1`] = `
<div
  className="single_request_column"
>
  <div
    className="single_request_info"
  >
    <time>
      7th_October_2018
    </time>
    <span
      className="request_status"
    >
      pending
    </span>
    <h3
      className="single_request_title"
    >
      General repainting
    </h3>
    <h4>
      Smartphone
    </h4>
    <p
      className="single_request_body"
    >
      Although a downpour briefly interrupted play in the early stages of the second half, Nigeria played with more intent after half-time and went close in the 63rd minute, as John Obi Mikel saw a header saved by Vaclik.
    </p>
    <div
      className="request_footer"
    >
      <a
        className="buttons button_small"
        id="disapprove"
        onClick={[MockFunction]}
      >
        Disapprove
      </a>
      <a
        className="buttons button_small button_right"
        id="approve"
        onClick={[MockFunction]}
      >
        Approve
      </a>
    </div>
  </div>
</div>
`;
